--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -20,7 +20,6 @@
   transition: background-color 0.3s ease;
 }
 
-
 .btnPrimaryCustom:hover {
   background-color: #3971b4;
 }
@@ -38,6 +37,14 @@
 
 .title {
   font-weight: 700;
+}
+
+.brand {
+  color: #a0006d;
+}
+
+.linkWrapper {
+  font-size: 14px;
 }
 
 .authBackgroundMobile {
@@ -63,7 +70,6 @@
   justify-content: center;
   align-items: center;
 }
-
 
 .authInner {
   width: 100%;
