--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -30,3 +30,14 @@ body {
     -1px  1px 0 #000,
      1px  1px 0 #000;
 }
+
+.react-loading-skeleton {
+  background-color: rgba(211, 211, 211, 0.3) !important;
+  background-image: linear-gradient(
+    90deg,
+    rgba(211, 211, 211, 0.3),
+    rgba(255, 255, 255, 0.2),
+    rgba(211, 211, 211, 0.3)
+  ) !important;
+  opacity: 0.7; 
+}
